@@ -17,7 +17,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'org.robolectric'
 
 android {
     compileSdkVersion 22
@@ -52,24 +51,25 @@ android {
 
 dependencies {
     // Android compatibility
-    compile 'com.android.support:support-v4:22.0.0@aar'
-    compile 'com.android.support:appcompat-v7:22.0.0@aar'
-    compile 'com.android.support:support-annotations:22.0.0'
+    compile 'com.android.support:support-v4:22.2.1@aar'
+    compile 'com.android.support:appcompat-v7:22.2.1@aar'
+    compile 'com.android.support:support-annotations:22.2.1'
 
     // https://github.com/google/dagger
-    compile 'com.google.dagger:dagger:2.0'
-    apt 'com.google.dagger:dagger-compiler:2.0'
+    compile 'com.google.dagger:dagger:2.0.1'
+    apt 'com.google.dagger:dagger-compiler:2.0.1'
+    provided 'javax.annotation:jsr250-api:1.0'
 
-    androidTestCompile 'com.google.dagger:dagger:2.0'
-    androidTestApt 'com.google.dagger:dagger-compiler:2.0'
+    androidTestCompile 'com.google.dagger:dagger:2.0.1'
+    androidTestApt 'com.google.dagger:dagger-compiler:2.0.1'
 
-    testCompile 'com.google.dagger:dagger:2.0'
-    testCompile 'com.google.dagger:dagger-compiler:2.0'
-    // testApt 'com.google.dagger:dagger-compiler:2.0' // Waiting for gradle plugin 1.3.x
+    testCompile 'com.google.dagger:dagger:2.0.1'
+    testCompile 'com.google.dagger:dagger-compiler:2.0.1'
+    //testApt 'com.google.dagger:dagger-compiler:2.0' // Waiting for gradle plugin 1.4.x
     // https://bitbucket.org/hvisser/android-apt/issue/22/dagger-robolectric-gradle-apt-source-not
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.0-rc2'
+    testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.mockito:mockito-core:1.9.5'
     testCompile 'com.google.dexmaker:dexmaker:1.0'
     testCompile 'com.google.dexmaker:dexmaker-mockito:1.0'
@@ -84,34 +84,7 @@ dependencies {
 
 configurations.all {
     resolutionStrategy {
-        force 'com.android.support:support-annotations:22.0.0'
-    }
-}
-
-robolectric {
-    // Configure includes / excludes
-    include '**/*Test.class'
-    exclude '**/espresso/**/*.class'
-
-    // Configure max heap size of the test JVM
-    maxHeapSize = '2048m'
-
-    // Configure the test JVM arguments - Does not apply to Java 8
-    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-
-    // Specify max number of processes (default is 1)
-    maxParallelForks = 4
-
-    // Specify max number of test classes to execute in a test process
-    // before restarting the process (default is unlimited)
-    forkEvery = 150
-
-    // configure whether failing tests should fail the build
-    ignoreFailures true
-
-    // use afterTest to listen to the test execution results
-    afterTest { descriptor, result ->
-        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
+        force 'com.android.support:support-annotations:22.2.1'
     }
 }
 
